# pirohxy

./: Cargo.toml  LICENSE  README.md  bacon.toml  build.rs  dist-workspace.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish-crate.yml  release.yml
src/: authenticated_router.rs  cfg.rs  cli.rs  config.rs  lib.rs  main.rs  protocol.rs  shutdown.rs  stream.rs
src/config/: auther.rs  identity.rs  mod.rs  resolver.rs
src/protocol/: client.rs  iroh.rs  mod.rs  socks.rs
